test/pass/exceptions/foreign_raise.lly
define f(a: Integer) : Integer
{
    try: {
        if a % 2:
            raise ValueError::new("")
    except Exception:

    }

    return a
}


[1, 2, 3, 4].map(f)
