test/fail/internal/return_pops_try_blocks.lly
#[
ValueError: Test
Traceback:
    from return_pops_try_blocks.lly:22: in g
    from return_pops_try_blocks.lly:26: in __main__
]#

define f(a: Integer)
{
    try: {
        while 1: {
            1
            return
        }
    except Exception as e:
        print("caught!")
    }
}

define g
{
    raise ValueError("Test\n")
}

f(1)
g()
